# quantumrand-

./: .env.example  .gitignore  .railwayignore  CLAUDE.md  Procfile  README.md  railway.json  requirements.txt
.github/workflows/: ci.yml
app/: auth.py  billing.py  cache.py  config.py  database.py  finance.py  main.py  pilotos_client.py  quantum_engine.py  user_auth.py
app/routers/: cybersecurity.py  gaming.py  healthcare.py  iot.py  legal.py
app/static/: 404.html  cybersecurity.html  dashboard.html  fintech.html  gaming.html  healthcare.html  index.html  iot.html  legal.html  login.html  privacy.html  robots.txt  security.html  signup.html  sitemap.xml  status.html  terms.html
pilotos/: docker-compose.yml
pilotos/pilotos-4.0/PilotOS-Config/: config.json
pilotos/pilotos-4.0/mysqlInit/: config.yaml
sdk/: README.md  pyproject.toml
sdk/getquantumrand/: README.md  __init__.py  client.py
sdk/go/: README.md  audit.go  entropy.go  errors.go  finance.go  gaming.go  go.mod  health.go  iot.go  legal.go  models.go  quantumrand.go  security.go
sdk/go/examples/audit/: main.go
sdk/go/examples/basic/: main.go
sdk/go/examples/fintech/: main.go
sdk/javascript/: package.json
sdk/js/: README.md  package.json
sdk/js/src/: index.d.ts  index.js
sdk/python/: README.md  setup.py
sdk/python/quantumrand/: __init__.py  client.py
sdk/quantumrand/: README.md  __init__.py  client.py
simulator/: config.py  launcher.py
tests/: test_auth_billing.py  test_phase1.py  test_phase2.py  test_predeploy.py  test_verticals_gaming_healthcare.py  test_verticals_iot.py  test_verticals_legal_security.py
