[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "getquantumrand"
version = "1.0.0"
description = "Python SDK for the QuantumRand API — true quantum randomness as a service"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["httpx>=0.24"]
keywords = ["quantum", "random", "qrng", "cryptography", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Homepage = "https://quantumrand.dev"
Repository = "https://github.com/getquantumrand/quantumrand-"
Documentation = "https://quantumrand.dev/docs"

[tool.setuptools.packages.find]
include = ["getquantumrand*"]
